<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity$PlaceholderFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/main_btn_lock"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/main_btn_lock_bg"
                    android:src="@drawable/main_btn_lock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/show_lock" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                tools:ignore="NewApi" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/main_btn_settings"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="@drawable/main_btn_settings_bg"
                        android:src="@drawable/main_btn_settings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/settings" />

                </LinearLayout>

                <Space
                    android:layout_width="50dp"
                    android:layout_height="90dp"
                    tools:ignore="NewApi" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/main_btn_gift"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="@drawable/main_btn_gift_bg"
                        android:src="@drawable/main_btn_gift" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/more" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
